--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,10 @@
     <artifactId>docker-jenkins-practice</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+    </properties>
 </project>
